--- a/Magazine011/Views/_ViewImports.cshtml
+++ b/Magazine011/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Magazine011
 @using Magazine011.Models
-@using Magazine011.ViewModel
+@using Magazine011.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
