added picture upload implementation

--- a/Magazine011/Views/User/EditProfile.cshtml
+++ b/Magazine011/Views/User/EditProfile.cshtml
@@ -2,7 +2,8 @@
 
 @{
     ViewData["title"] = "Edit Profile page";
-    var userPhoto = string.IsNullOrEmpty(Model.Photo) ? "~/images/user-avatar.png" : Model.Photo;
+    var userPhoto = "~/images";
+        userPhoto += string.IsNullOrEmpty(Model.Photo) ? "/user-avatar.png" : Model.Photo;
 }
 
 
@@ -11,7 +12,9 @@
     <h1>@Model.Name's Profile</h1>
     <div class="myFlex">
         <div class="profile-pix">
-            <img src="@userPhoto" asp-append-version="true" />
+            <a asp-action="ChangeProfilePix" asp-controller="User" asp-route-userId="@Model.Id">
+                <img src="@userPhoto" asp-append-version="true" />
+            </a>
         </div>
         <div class="user-info">
             <form method="post" asp-action="EditProfile" asp-controller="User">
