--- a/Magazine011/Views/User/Register.cshtml
+++ b/Magazine011/Views/User/Register.cshtml
@@ -22,6 +22,12 @@
                 <div class="form-group-control">
                     <label asp-for="Name">Name:</label>
                     <input asp-for="Name" />
+                </div> 
+                
+                <span asp-validation-for="LastName"></span>
+                <div class="form-group-control">
+                    <label asp-for="LastName">Last Name:</label>
+                    <input asp-for="LastName" />
                 </div>
 
                 <span asp-validation-for="Email"></span>
